# gitbutler

./: Cargo.toml
crates/but/: Cargo.toml
crates/but-core/src/: diff_types.rs  repo_ext.rs
crates/but-hooks/: Cargo.toml
crates/but-hooks/src/: hook_manager.rs  managed_hooks.rs
crates/but-hooks/src/hook_manager/: mod.rs
crates/but-hooks/src/managed_hooks/: mod.rs  tests.rs
crates/but-hooks/tests/hooks/: main.rs
crates/but-hooks/tests/hooks/hook_manager/: detect_hook_manager.rs  detect_hook_manager_in_hooks_dir.rs  mod.rs
crates/but-hooks/tests/hooks/managed_hooks/: ensure.rs  install.rs  mod.rs  script_behavior.rs  uninstall.rs
crates/but-link/src/: cli.rs  commands.rs  db.rs
crates/but-link/src/tui/: mod.rs
crates/but-schemars/src/: lib.rs
crates/but/skill/: SKILL.with-link.md
crates/but/skill/references/: link.md
crates/but/src/: lib.rs
crates/but/src/args/: mod.rs
crates/but/src/command/: hook.rs  skill.rs
crates/but/src/command/legacy/: setup.rs  teardown.rs
crates/but/tests/but/: journey.rs
crates/but/tests/but/command/: hook_lifecycle.rs  hook_prek_integration.rs  hook_status.rs  link.rs  setup.rs  teardown.rs
crates/gitbutler-branch-actions/src/: integration.rs
crates/gitbutler-branch-actions/tests/branch-actions/virtual_branches/: workspace_migration.rs
crates/gitbutler-repo/: Cargo.toml
crates/gitbutler-repo/src/: lib.rs
